crates/kirin-derive-core/src/ir/snapshots/kirin_derive_core__ir__tests__input_enum_global_wrapper.snap
---
source: crates/kirin-derive-core/src/ir/mod.rs
expression: ast
---
Input {
    name: Ident(
        MyEnumAST,
    ),
    generics: Generics {
        lt_token: None,
        params: [],
        gt_token: None,
        where_clause: None,
    },
    attrs: GlobalOptions {
        crate_path: Some(
            Path {
                leading_colon: None,
                segments: [
                    PathSegment {
                        ident: Ident(
                            my_crate,
                        ),
                        arguments: PathArguments::None,
                    },
                ],
            },
        ),
        ir_type: Path {
            leading_colon: None,
            segments: [
                PathSegment {
                    ident: Ident(
                        MyLattice,
                    ),
                    arguments: PathArguments::None,
                },
            ],
        },
        builder: None,
        constant: false,
        pure: false,
        speculatable: false,
        terminator: false,
    },
    extra_attrs: (),
    data: Enum(
        DataEnum {
            variants: [
                Statement {
                    name: Ident(
                        VariantA,
                    ),
                    attrs: StatementOptions {
                        format: None,
                        builder: None,
                        constant: false,
                        pure: false,
                        speculatable: false,
                        terminator: false,
                    },
                    fields: [],
                    wraps: Some(
                        Wrapper {
                            field: FieldIndex {
                                ident: None,
                                index: 0,
                            },
                            ty: Type::Path {
                                qself: None,
                                path: Path {
                                    leading_colon: None,
                                    segments: [
                                        PathSegment {
                                            ident: Ident(
                                                AnotherA,
                                            ),
                                            arguments: PathArguments::None,
                                        },
                                    ],
                                },
                            },
                        },
                    ),
                    extra: (),
                    extra_attrs: (),
                    raw_attrs: [],
                },
                Statement {
                    name: Ident(
                        VariantB,
                    ),
                    attrs: StatementOptions {
                        format: None,
                        builder: None,
                        constant: false,
                        pure: false,
                        speculatable: false,
                        terminator: false,
                    },
                    fields: [],
                    wraps: Some(
                        Wrapper {
                            field: FieldIndex {
                                ident: None,
                                index: 0,
                            },
                            ty: Type::Path {
                                qself: None,
                                path: Path {
                                    leading_colon: None,
                                    segments: [
                                        PathSegment {
                                            ident: Ident(
                                                AnotherB,
                                            ),
                                            arguments: PathArguments::None,
                                        },
                                    ],
                                },
                            },
                        },
                    ),
                    extra: (),
                    extra_attrs: (),
                    raw_attrs: [],
                },
            ],
        },
    ),
    raw_attrs: [
        Attribute {
            pound_token: Pound,
            style: AttrStyle::Outer,
            bracket_token: Bracket,
            meta: Meta::Path {
                leading_colon: None,
                segments: [
                    PathSegment {
                        ident: Ident(
                            wraps,
                        ),
                        arguments: PathArguments::None,
                    },
                ],
            },
        },
        Attribute {
            pound_token: Pound,
            style: AttrStyle::Outer,
            bracket_token: Bracket,
            meta: Meta::List {
                path: Path {
                    leading_colon: None,
                    segments: [
                        PathSegment {
                            ident: Ident(
                                kirin,
                            ),
                            arguments: PathArguments::None,
                        },
                    ],
                },
                delimiter: MacroDelimiter::Paren(
                    Paren,
                ),
                tokens: TokenStream [
                    Ident {
                        sym: crate,
                    },
                    Punct {
                        char: '=',
                        spacing: Alone,
                    },
                    Literal {
                        lit: "my_crate",
                    },
                    Punct {
                        char: ',',
                        spacing: Alone,
                    },
                    Ident {
                        sym: type,
                    },
                    Punct {
                        char: '=',
                        spacing: Alone,
                    },
                    Ident {
                        sym: MyLattice,
                    },
                ],
            },
        },
    ],
}
